[package]
name = "bp-dbc"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Deterministic bitcoin commitments library"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "bitcoin", "cryptography", "smart-contracts", "single-use-seals"]
categories = ["cryptography::cryptocurrencies", "encoding"]
readme = "../README.md"
edition = "2018"

[lib]
name = "dbc"
path = "src/lib.rs"

[dependencies]
amplify = "3.9.1"
bitcoin = { version = "0.28.0", git = "https://github.com/LNP-BP/rust-bitcoin", branch = "taproot/all" }
secp256k1 = { version = "0.20.3", features = ["global-context"] }
bitcoin_scripts = { version = "0.6.0", git = "https://github.com/LNP-BP/descriptor-wallet" }
descriptors = { version = "0.6.0", git = "https://github.com/LNP-BP/descriptor-wallet" }
strict_encoding = { version = "1.8.0", git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
commit_verify = { version = "0.6.0", git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
miniscript = { version = "7.0.0", git = "https://github.com/LNP-BP/rust-miniscript", branch = "taproot" }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", optional = true }

[features]
default = []
all = ["serde"]
serde = ["amplify/serde", "bitcoin/use-serde", "bitcoin_scripts/serde", "commit_verify/serde", "miniscript/serde", "serde_crate", "serde_with"]
