[package]
name = "bp-seals"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Bitcoin single-use-seals library"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "bitcoin", "cryptography", "smart-contracts", "single-use-seals"]
categories = ["cryptography::cryptocurrencies", "encoding"]
readme = "../README.md"
edition = "2018"

[lib]
name = "seals"
path = "src/lib.rs"

[dependencies]
amplify = "3.9.1"
bitcoin = { version = "0.28.0", git = "https://github.com/LNP-BP/rust-bitcoin", branch = "taproot/all" }
single_use_seals = { version = "0.6.0", git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
commit_verify = { version = "0.6.0", git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
strict_encoding = { version = "1.8.0", git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
lnpbp_bech32 = { version = "0.6.0", git = "https://github.com/LNP-BP/rust-lnpbp", branch = "v0.6" }
bp-dbc = { version = "0.6.0", path = "../dbc" }
async-trait = { version = "0.1.51", optional = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", optional = true }

[features]
default = []
all = ["async", "serde"]
async = ["single_use_seals/async", "async-trait"]
serde = ["amplify/serde", "bitcoin/use-serde", "commit_verify/serde", "lnpbp_bech32/serde", "bp-dbc/serde", "serde_crate", "serde_with"]
